[package]
name = "cdp"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.2.12", features = ["derive"] }
lapin = "2.1.1"
linemux = "0.2.3"
oorandom = "11.1.3"
prometheus-client = "0.16.0"
redis = { version = "0.21.5", features = ["cluster", "tokio-comp"] }
reqwest = { version = "0.11.11", features = ["brotli", "gzip", "deflate"] }
rumqttc = "0.13.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
tokio = { version = "1.20.0", features = ["full"] }
tokio-amqp = "2.0.0"
